tests/test_typing/bad/err5.catala_en
> Include: common.catala_en

```catala
scope S:
  definition z equals [
    Structure { -- i: 3 -- e: Int content x };
    Structure { -- i: 4 -- e: y };
    1040
  ]
  definition a equals number of (z ++ z) / 2
```

```catala-test-inline
$ catala Typecheck
[ERROR] Error during typechecking, incompatible types:
--> integer
--> Structure

Error coming from typechecking the following expression:
 --> tests/test_typing/bad/err5.catala_en:8.4-8
  |
8 |     1040
  |     ^^^^
  +

Type integer coming from expression:
 --> tests/test_typing/bad/err5.catala_en:8.4-8
  |
8 |     1040
  |     ^^^^
  +

Type Structure coming from expression:
  --> tests/test_typing/bad/common.catala_en:14.30-39
   |
14 |   output z content collection Structure
   |                               ^^^^^^^^^
   +
#return code 255#
```
